--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ authors = ["Shashank Kambhampati <frost263@gmail.com>"]
 serde = "1.0"
 serde_json = "1.0"
 clap = "2"
+
+[profile.release]
+lto = true
+panic='abort'
